outputs_20260401-082232-c17091c0/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_z3jdcsgd\test\test_gtm_tom_3_phase_inverter_pwm_2.c: In function 'test_TC_G1_001_enable_guard_gtm_already_enabled':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_z3jdcsgd\test\test_gtm_tom_3_phase_inverter_pwm_2.c:34:5: error: implicit declaration of function 'TEST_ASSERT_EQUAL_UINT32_MESSAGE' [-Wimplicit-function-declaration]
   34 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(1, mock_IfxGtm_isEnabled_getCallCount(), "GTM enable status must be checked once");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_z3jdcsgd\test\test_gtm_tom_3_phase_inverter_pwm_2.c: In function 'test_TC_G2_001_init_config_frequency_and_channels':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_z3jdcsgd\test\test_gtm_tom_3_phase_inverter_pwm_2.c:70:5: error: implicit declaration of function 'TEST_ASSERT_EQUAL_INT_MESSAGE' [-Wimplicit-function-declaration]
   70 |     TEST_ASSERT_EQUAL_INT_MESSAGE(UT_NUM_CHANNELS, mock_IfxGtm_Pwm_init_lastNumChannels, "Number of logical PWM channels must be 3 for 3-phase");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_z3jdcsgd\test\test_gtm_tom_3_phase_inverter_pwm_2.c:71:5: error: implicit declaration of function 'TEST_ASSERT_FLOAT_WITHIN_MESSAGE' [-Wimplicit-function-declaration]
   71 |     TEST_ASSERT_FLOAT_WITHIN_MESSAGE(UT_FLOAT_EPSILON, UT_PWM_FREQ_HZ, mock_IfxGtm_Pwm_init_lastFrequency, "PWM switching frequency must be 20 kHz");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_z3jdcsgd\test\test_gtm_tom_3_phase_inverter_pwm_2.c: In function 'test_TC_G3_001_update_increments_duty_no_wrap':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_z3jdcsgd\test\test_gtm_tom_3_phase_inverter_pwm_2.c:97:5: error: implicit declaration of function 'updateGtmTom3phInvDuty' [-Wimplicit-function-declaration]
   97 |     updateGtmTom3phInvDuty();
      |     ^~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_z3jdcsgd\test\test_gtm_tom_3_phase_inverter_pwm_2.c: In function 'main':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_z3jdcsgd\test\test_gtm_tom_3_phase_inverter_pwm_2.c:173:5: error: implicit declaration of function 'UNITY_BEGIN' [-Wimplicit-function-declaration]
  173 |     UNITY_BEGIN();
      |     ^~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_z3jdcsgd\test\test_gtm_tom_3_phase_inverter_pwm_2.c:176:5: error: implicit declaration of function 'RUN_TEST' [-Wimplicit-function-declaration]
  176 |     RUN_TEST(test_TC_G1_001_enable_guard_gtm_already_enabled);
      |     ^~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_z3jdcsgd\test\test_gtm_tom_3_phase_inverter_pwm_2.c:191:12: error: implicit declaration of function 'UNITY_END'; did you mean 'UNITY_H'? [-Wimplicit-function-declaration]
  191 |     return UNITY_END();
      |            ^~~~~~~~~
      |            UNITY_H
